--- a/1.notesJS/05.Global_n_Local_Scope.md
+++ b/1.notesJS/05.Global_n_Local_Scope.md
@@ -1,18 +1,18 @@
 
-# Scope
+# Scope :fire:
 
 [![N|global](images/globalScope.png)](https://github.com/stefan22/eloqJS/blob/master/eloqJSnotes/5.%20Global_n_Local_Scope.md)
 
-Global and Local Scope (or function scope):
+Global and Local Scope (or function scope):  :globe_with_meridians:
 
   - Global/local Scope is defined by where the variable first originated
   - Global/local Scope has to do with the execution context of some code/function
   - Generally if var has been set inside of a function, then likely to be local to the function
   
-In order to better understand Scope, it's important to know that everytime a Function/Code block gets Executed,
-it automatically creates its own (a brand new) execution context, a $this variable and an OUTER context environment; in case code/function execution originated outside of current scope.
+In order to better understand Scope, it's important to know that everytime a **Function/Code** block gets **Executed**,
+it **automatically** **creates** its **own** (a brand new) **execution context**, a **$this variable** and an **OUTER** context **environment**; in case code/function execution originated outside of current scope.
 
-### Example js file  - Question is what is the value of message when you call function a
+### Example js file  - Question is what is the value of message when you call function a  :deciduous_tree:
 I just explained it here above. But basically, exec a, it also invokes b; which then needs to pick
 between content from var message inside of a, or var message sitting outside of a content.
 
@@ -35,7 +35,7 @@ a();
 
 ```
 
-#### Starts by Calling/exec Function A
+#### Starts by Calling/exec Function A  :cactus:
 
    - exec a calls function b
    - b only passes message in a
@@ -45,7 +45,7 @@ a();
      to go higher/outside of a if needs to 
    - finds var message and assigns the val of that var to message.
 
-####  But lets say function b is inside of function a
+####  But lets say function b is inside of function a  :cactus:
    - that changes things then => scope of function b is universe of function a and just like
      Miguel said the other day, carries the advantage of protecting this content. Sort of encapsulating it 
      within its outer function a. Cannot be called from outside of a anymore.
