--- a/1.notesJS/05.Global_n_Local_Scope.md
+++ b/1.notesJS/05.Global_n_Local_Scope.md
@@ -13,8 +13,8 @@ In order to better understand Scope, it's important to know that everytime a **F
 it **automatically** **creates** its **own** (a brand new) **execution context**, a **$this variable** and an **OUTER** context **environment**; in case code/function execution originated outside of current scope.
 
 ### Example js file  - Question is what is the value of message when you call function a  :deciduous_tree:
-I just explained it here above. But basically, exec a, it also invokes b; which then needs to pick
-between content from var message inside of a, or var message sitting outside of a content.
+Basically, executing **a**, it also invokes **b**; which then needs to pick
+between content from **var message** inside of **a**, or **var message** sitting outside of **a** content.
 
 
 ```sh
@@ -53,4 +53,4 @@ a();
 
 
 
-
+:100:
