--- a/1.notesJS/05.Global_n_Local_Scope.md
+++ b/1.notesJS/05.Global_n_Local_Scope.md
@@ -37,18 +37,18 @@ a();
 
 #### Starts by Calling/exec Function A  :cactus:
 
-   - exec a calls function b
-   - b only passes message in a
-   - message did not first originated inside of function a
+   - exec **a** calls function **b**
+   - **b** only passes message in **a**
+   - **message** did **not** first **originated inside** of function **a**
    - there was a var message before that.
-   - exec of function creates a new context env that allows function b
-     to go higher/outside of a if needs to 
-   - finds var message and assigns the val of that var to message.
+   - **exec** of **function** **creates** a **new context** env that **allows** function **b**
+     to **go higher/outside** of a if needs to 
+   - finds **var message** and assigns the val of that var to message.
 
 ####  But lets say function b is inside of function a  :cactus:
-   - that changes things then => scope of function b is universe of function a and just like
-     Miguel said the other day, carries the advantage of protecting this content. Sort of encapsulating it 
-     within its outer function a. Cannot be called from outside of a anymore.
+   - that changes things then => **scope of function b is** universe of **function a** and just like
+     Miguel said the other day, carries the advantage of protecting this content. Sort of **encapsulating it 
+     within its outer function a**. **Cannot be called from outside of a anymore**.
      Bottom line -> for purposes of exercise now value of message is the same for function a & b.
 
 
