--- a/1.notesJS/07.ObjectType.md
+++ b/1.notesJS/07.ObjectType.md
@@ -1,4 +1,5 @@
-## Object type
+## Object type  :mortar_board:
+
 collection of name-value pairs
 
 ````sh
@@ -9,7 +10,7 @@ collection of name-value pairs
     
 ```
 
-try this now:
+try this now:  :battery:
 
 ````sh
     company.ceo.firstName = "Mark";
@@ -19,7 +20,7 @@ try this now:
 ```
 here company.ceo hasn't been defined yet.
 
-To fix it:
+To fix it:  :battery:
 
 ```sh
     company.ceo = new Object();
@@ -31,7 +32,7 @@ To fix it:
         name: "Facebook"
 ```
 
-Get using dotNotation too:
+Get using dotNotation too:  :bulb:
 
 ```sh
     console.log("company ceo is " + company.ceo.firstName);
@@ -43,7 +44,7 @@ or
     > Facebook
 ```
 
-A better way to create/declare an Object:
+A better way to create/declare an Object:  :bulb:
 
 ```sh
     var company = {};
@@ -64,3 +65,6 @@ and
     };
     
 ```
+
+
+:100:
