--- a/1.notesJS/09.PassingVariables.md
+++ b/1.notesJS/09.PassingVariables.md
@@ -1,6 +1,6 @@
-## Passing Variables: By_Value vs. By_Reference
+## Passing Variables: By_Value vs. By_Reference  :dragon:
  
-### <kbd>I</kbd> Passing By Value
+### <kbd>I</kbd> Passing By Value  :tanabata_tree:
 Given <strong>b=a</strong>, passing/copying by value means changing
 copied value in <strong>b</strong> does not affect the value stored
 in <strong>a</strong> and visa versa.
@@ -8,38 +8,42 @@ in <strong>a</strong> and visa versa.
 So if I change the value of <strong>b</strong>, 
 it will not affect the value of <strong>a</strong>
 
-### <kbd>II</kbd> Passing By Reference
+### <kbd>II</kbd> Passing By Reference  :wind_chime:
 
 Given **b=a**, passing/copying by reference means
  changing copied value in **b** does affect the value
  stored in **a** and visa versa.
 
-### In JavaScript:
+### In JavaScript:  :wrench:
 
 #### <kbd>1</kbd> <u>Primitives Are Passed By Value</u>
 
+```sh
      var a = 7;
      
      var b = a;
+```
      
 > &#161; **b** ends up with the same value as **a**.
 
  ![js1](images/passing1.png?raw=true "mobile" target="_blank")
  
- When we declared **variable a** and equal it to **7**.       
+ When we declared **variable a** and equal it to **7**.             
  In memory, **a** gets memory allocation (**address 001**) and the value 
- sitting in that memory is **7**.
+ sitting in that memory is **7**.  :low_brightness:   
+ 
      
  Then we declared **var b** and copy the contents of **var a** into **b**.   
  In memory, we're allocating another memory location (**002**) and 
- we're copying the value **7** into that memory location.
+ we're copying the value **7** into that memory location.  :low_brightness:
  
 #### <kbd>2</kbd> <u>Objects Are Passed By Reference</u>
 
-
+```sh
      var a = {x: 7};
      
      var b = a;
+```
      
 > &#161; **b** ends up with the same value as **a**.
 
@@ -48,15 +52,17 @@ Given **b=a**, passing/copying by reference means
 
  When we override the **variable b** with the value **5**,   
  then what we're doing is replacing a different value into the 
- same memory location that **b** is pointing to (**002**).
+ same memory location that **b** is pointing to (**002**).  :bulb:
+ 
+ 
  
  So here, what you'll end up with is that **a** is still pointing
  to its original location **001**, which still has number **7** in it as
  the value in that memory location, and **b** is now pointing to **002**
- with a different value.     
+ with a different value.           
  So therefore **a** and **b** have nothing to do
  with each other, and at this point they are not effective on 
- the other.
+ the other.   :high_brightness:
  
  
 ####  :black_medium_small_square: <u>var a = {x: 7}; we declared an object</u>           
