--- a/1.notesJS/08.FunctionsRObjects.md
+++ b/1.notesJS/08.FunctionsRObjects.md
@@ -68,4 +68,52 @@ one <kbd>more</kbd>:
     var result = doOperationOn(5,multiplyBy7);
     returns 35     
 ```  
+
+
+### this
+
+- this is a keyword that allows an element to referred
+  to itself
+- allows u to access an element info
+- this also used outside functions
+
+ex:  
+````
+    <a onclick..this
+    
+    whenever computer sees this is going to backtrack
+    to the a element in this case
+````
+
+here you'll get loco as output and fifth in console.
+````
+<button id="loco" onclick="displayId(this);">
+        fifth</button>
+````
+
+````
+function displayId(elem) {
+  var stuff = document.getElementById('stuff');
+  stuff.textContent = elem.id;
+  console.log(elem.id);
+  console.log(elem.textContent);
+}
+````
+
+another example using this:
+````
+<img .....>
+onclick="console.log(this.alt);
+
+````
+
+or alert an entire div innerHTML 
+
+````
+  <div class="room" onclick = "alert(this.innerHTML)">
+    lets do an alert using console.log(this) innerHTML
+    when someone clicks anywhere in this div element
+  </div>
+
+````
   
