--- a/1.notesJS/08.FunctionsRObjects.md
+++ b/1.notesJS/08.FunctionsRObjects.md
@@ -70,14 +70,14 @@ one <kbd>more</kbd>:
 ```  
 
 
-### this
+### this :zap:
 
-- this is a keyword that allows an element to referred
+- :rooster: this is a keyword that allows an element to referred
   to itself
-- allows u to access an element info
-- this also used outside functions
+- :rooster: allows u to access an element info
+- :rooster: this also used outside functions
 
-ex:  
+ex:   :sweat_drops:
 ````
     <a onclick..this
     
@@ -85,7 +85,9 @@ ex:
     to the a element in this case
 ````
 
-here you'll get loco as output and fifth in console.
+here you'll get loco as output and fifth in console.  :boom:
+
+
 ````
 <button id="loco" onclick="displayId(this);">
         fifth</button>
@@ -100,15 +102,16 @@ function displayId(elem) {
 }
 ````
 
-another example using this:
+another example using this: :boom:
+
+
 ````
 <img .....>
 onclick="console.log(this.alt);
 
 ````
 
-or alert an entire div innerHTML 
-
+or alert an entire div innerHTML  :boom:
 ````
   <div class="room" onclick = "alert(this.innerHTML)">
     lets do an alert using console.log(this) innerHTML
