--- a/1.notesJS/08.FunctionsRObjects.md
+++ b/1.notesJS/08.FunctionsRObjects.md
@@ -73,9 +73,9 @@ one <kbd>more</kbd>:
 ### this :zap:
 
 - :rooster: this is a keyword that allows an element to referred
-  to itself
-- :rooster: allows u to access an element info
-- :rooster: this also used outside functions
+  to **itself**
+- :rooster: allows u to access an **element info**
+- :rooster: this also used **outside functions**
 
 ex:   :sweat_drops:
 ````
@@ -84,11 +84,13 @@ ex:   :sweat_drops:
     whenever computer sees this is going to backtrack
     to the a element in this case
 ````
+`
 
 here you'll get loco as output and fifth in console.  :boom:
 
 
-````
+
+```
 <button id="loco" onclick="displayId(this);">
         fifth</button>
 ````
@@ -100,7 +102,7 @@ function displayId(elem) {
   console.log(elem.id);
   console.log(elem.textContent);
 }
-````
+```
 
 another example using this: :boom:
 
@@ -109,9 +111,10 @@ another example using this: :boom:
 <img .....>
 onclick="console.log(this.alt);
 
-````
+```
 
 or alert an entire div innerHTML  :boom:
+
 ````
   <div class="room" onclick = "alert(this.innerHTML)">
     lets do an alert using console.log(this) innerHTML
