--- a/1.notesJS/08.FunctionsRObjects.md
+++ b/1.notesJS/08.FunctionsRObjects.md
@@ -83,10 +83,10 @@ ex:   :sweat_drops:
     
     whenever computer sees this is going to backtrack
     to the a element in this case
-````
-`
+```
 
-here you'll get loco as output and fifth in console.  :boom:
+
+here you'll get **loco** as output and **fifth** in console.  :boom:
 
 
 
@@ -104,7 +104,7 @@ function displayId(elem) {
 }
 ```
 
-another example using this: :boom:
+another example using **this**: :boom:
 
 
 ````
@@ -113,7 +113,7 @@ onclick="console.log(this.alt);
 
 ```
 
-or alert an entire div innerHTML  :boom:
+or **alert** an entire **div innerHTML**  :boom:
 
 ````
   <div class="room" onclick = "alert(this.innerHTML)">
