--- a/1.notesJS/08.FunctionsRObjects.md
+++ b/1.notesJS/08.FunctionsRObjects.md
@@ -77,7 +77,7 @@ one <kbd>more</kbd>:
 - :rooster: allows u to access an **element info**
 - :rooster: this also used **outside functions**
 
-ex:   :sweat_drops:
+<kbd>ex:</kbd>   :sweat_drops:
 ````
     <a onclick..this
     
@@ -86,7 +86,7 @@ ex:   :sweat_drops:
 ```
 
 
-here you'll get **loco** as output and **fifth** in console.  :boom:
+<kbd>here</kbd> you'll get **loco** as output and **fifth** in console.  :boom:
 
 
 
@@ -104,7 +104,7 @@ function displayId(elem) {
 }
 ```
 
-another example using **this**: :boom:
+<kbd>another</kbd> example using **this**: :boom:
 
 
 ````
@@ -113,7 +113,7 @@ onclick="console.log(this.alt);
 
 ```
 
-or **alert** an entire **div innerHTML**  :boom:
+<kbd>or</kbd> **alert** an entire **div innerHTML**  :boom:
 
 ````
   <div class="room" onclick = "alert(this.innerHTML)">
