--- a/1.notesJS/16.HandlingEvents.md
+++ b/1.notesJS/16.HandlingEvents.md
@@ -144,7 +144,42 @@ document.addEventListener('DOMContentLoaded',
 of the **addEventListener**.
 
 
+### Events execution example:  :rocket:
 
+ - :rooster: will print **LOAD** on page load
+ - :rooster: will print **RESIZED** on page resize
+ - :rooster: will print **CLICKED** on button clicked
+
+````
+<html>
+  <body onload="message('LOAD');" onresize="message(RESIZED);">
+    <head>
+      <title>testi</title>
+    </head>
+  </body>
+  
+  
+  <button type="button" onclick="message('CLICKED');">
+  button</button>
+
+   <div id="output"></div>
+
+  
+  
+<script>
+function message(e) {
+  
+   var output = document.getElementById('output');
+  
+    return output.textContent = e;
+  
+}
+</script>
+
+ </body>
+</html>
+
+````
 
 
 
