--- a/1.notesJS/12.0.Arrays.md
+++ b/1.notesJS/12.0.Arrays.md
@@ -1,5 +1,30 @@
-## arrays - collections of data:floppy_disk:
-> even different type of objects within same array   
+## arrays - collections of data &nbsp;&nbsp;  :tractor: :oncoming_police_car: :truck: 
+> even different type of objects within same array 
+
+### single node :toilet:
+This code will make API to search DOM until it finds
+a Node with of 'idname'
+
+````
+document.getElementById('idname');
+````
+
+### zero, one or more nodes :toilet: :toilet:
+These commands may return zero, one or more Nodes.
+
+````
+document.getElementsByTagName('p);
+document.getElementsByClassName('thumbnail');
+````
+
+> values in an array are called elements in CS. That's
+  how u know you're talking about an array.
+  
+ 
+ - javaScripts arrays are Objects
+ - arrays have attributes and methods
+ 
+
  
 ### :crossed_flags: creating an array (first way of creating arrays)
 var array = new Array();
