--- a/1.notesJS/12.0.Arrays.md
+++ b/1.notesJS/12.0.Arrays.md
@@ -24,8 +24,69 @@ document.getElementsByClassName('thumbnail');
  - javaScripts arrays are Objects
  - arrays have attributes and methods
  
+<br/>
 
- 
+````
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>JS Bin</title>
+</head>
+<body onload="fruits();">
+  
+  <p>On load event displays fruits:</p>
+  
+  <p id="show">fruits display here..</p>
+  
+  <br/><br/>
+  <hr/>
+  
+  <p>To add more fruits:<p>
+  <button type="button" name="button"
+   id="addFruit" onclick="addFruit();">
+    Add your fruit.
+  </button> 
+
+</body>
+</html>
+````
+js:
+
+````
+//global
+var ifruits = ['banana','orange','apple'];
+console.log(ifruits);
+
+
+function fruits() {
+  //add space btw array elems
+  var defruits = ifruits.join(', ');
+  console.log(defruits);
+  //add existing fruits to page
+  document
+  .getElementById('show')
+  .textContent = defruits;
+  
+  
+}//fruits
+
+
+function addFruit() {
+  //ask to add fruit
+  var fruit = prompt('add a fruit');
+  //add fruit to ifruits
+  ifruits.push(fruit);
+  //call fruits function
+  return fruits();
+  
+}
+````
+
+
+
+ <br/>
 ### :crossed_flags: creating an array (first way of creating arrays)
 var array = new Array();
 
