--- a/1.notesJS/12.0.Arrays.md
+++ b/1.notesJS/12.0.Arrays.md
@@ -21,10 +21,9 @@ document.getElementsByClassName('thumbnail');
   how u know you're talking about an array.
   
  
- - javaScripts arrays are Objects
- - arrays have attributes and methods
- 
 <br/>
+
+### Ex:  &nbsp;:melon: :grapes: :green_apple: :watermelon: :banana:
 
 ````
 <!DOCTYPE html>
