--- a/1.notesJS/12.0.Arrays.md
+++ b/1.notesJS/12.0.Arrays.md
@@ -51,7 +51,7 @@ document.getElementsByClassName('thumbnail');
 </body>
 </html>
 ````
-js:
+js: :melon: :grapes: :green_apple: :watermelon: :banana:
 
 ````
 //global
@@ -81,7 +81,7 @@ function addFruit() {
   return fruits();
   
 }
-````
+```
 
 
 
@@ -98,11 +98,13 @@ setting values via dot notation.
     console.log("hello " + name);
  };
  array[3] = {course: "The Fractured But Whole"};
-````
+```
+
 - typeof **array**    
     - `returns "object"`    
 - console.log(**array**);
-    - ["James Hetfield", 2, function, Object]
+
+- ["James Hetfield", 2, function, Object]
     
 contains different types of objects stored:
    - some are primitive,  
@@ -113,10 +115,10 @@ contains different types of objects stored:
 
 #### :rocket: setting or retrieving values via dotnotation :rocket:
 
-````   
+```` 
    retrieving values via dot notation
    console.log(array[2]);
-````
+```
 
 #### also you can get a function back or call the function
 
