--- a/1.notesJS/12.0.Arrays.md
+++ b/1.notesJS/12.0.Arrays.md
@@ -86,7 +86,7 @@ function addFruit() {
 
 
  <br/>
-### :crossed_flags: :lemon: :cherries: :pineapple::corn::apple: creating an array (first way of creating arrays)
+### :tangerine: :lemon: :cherries: :pineapple::corn::apple: &nbsp; creating an array (first way of creating arrays)
 var array = new Array();
 
 ````
