--- a/1.notesJS/12.0.Arrays.md
+++ b/1.notesJS/12.0.Arrays.md
@@ -77,6 +77,8 @@ function addFruit() {
   var fruit = prompt('add a fruit');
   //add fruit to ifruits
   ifruits.push(fruit);
+  //or you can always forget about this push method
+  //fruits += fruits[fruit[fruits.length-1]];
   //call fruits function
   return fruits();
   
