--- a/1.notesJS/12.2.For-in_Loops.md
+++ b/1.notesJS/12.2.For-in_Loops.md
@@ -15,7 +15,7 @@ object:
     course: 'javascript'
 
 };
-````
+```
 Ex:        
 :rocket: // good for objects cause objects don't have indices like an array does,
             instead, they have properties.   :rocket:
@@ -47,6 +47,94 @@ Ex:
    > name: Eric   
    > last: Cartman   
    > city: SouthPark  
+   
+   
+### javascript iteration  :zap:
+ 
+   1. initialization
+   2. condition evaluated:boolean: true | false
+   3. statements
+   4. increment
+   
+   And evaluate condition again. Exits when evaluates to false.
+   
+   ex:
+   
+   ````
+     for (index=0; index < array.length; index++) {
+        document.write(array[index]);
+     }
+   ````
+   
+ ### flow of  control
+controlling which code the computer executes by:
+
+- breaking your code into blocks
+- efficient algorithms execute only the blocks
+  needed
+- the execution of these blocks is called flow
+  of control.
+ 
+ Some very explicit:
+ 
+ - if statement
+   - evaluates a boolean expression before performing an action  :feet:
+     - if expression true,execute code
+     - if expression false, skip it
+      
+ <br />
+  <kbd>if syntax</kbd> :mag:
+  ![if statement](images/ifsyntax.png?raw=true "mobile" target="_blank")
+  
+  <br />
+
+Ex:
+````
+
+
+
+   function roundNumber(num) {
+     //parse to use toFixed
+     var myNum = parseInt(num).toFixed(2);
+     console.log('i get a number from this function ' + myNum);
+     return myNum;
+
+
+
+   }
+
+
+//enter grade score
+   var grade = prompt('enter grade score:');
+
+
+    /* little pre testing
+       not entering anything returns: ""
+    --------------------------------------------  
+    //console.log(grade); //returns "7"
+    //console.log(isNaN(grade)); //returns false
+    //console.log(parseInt(grade)); //returns 7
+
+    */
+
+  //make sure is a number
+    if (isNaN(parseInt(grade)) || grade == "") {
+
+      prompt('haha. Now enter a number!');
+
+    } else {
+     //round number 
+     console.log('right on! ' + grade + " is a number.");
+     //by wrapping up the code in a funtion, i am better able to
+     //control the flow of action
+     roundNumber(grade); 
+    }
+
+
+
+```
+   
+   
    
    
    
