--- a/1.notesJS/12.2.For-in_Loops.md
+++ b/1.notesJS/12.2.For-in_Loops.md
@@ -85,7 +85,7 @@ have nothing to do with data of array.
 <br />
 
 ### javascript iteration  :zap:
- 
+ Here, i'm referencing to a regular for loop  :curly_loop:
    1. initialization
    2. condition evaluated:boolean: true | false
    3. statements
