--- a/1.notesJS/12.2.For-in_Loops.md
+++ b/1.notesJS/12.2.For-in_Loops.md
@@ -85,7 +85,8 @@ have nothing to do with data of array.
 <br />
 
 ### javascript iteration  :zap:
- Here, i'm referencing to a regular for loop  :curly_loop:
+:curly_loop: an **here**, i'm referencing to a regular **for loop**  
+
    1. initialization
    2. condition evaluated:boolean: true | false
    3. statements
@@ -95,13 +96,13 @@ have nothing to do with data of array.
    
    ex:
    
-   ````
+````
      for (index=0; index < array.length; index++) {
         document.write(array[index]);
      }
-   ````
+```
    
- ### flow of  control
+### flow of  control
 controlling which code the computer executes by:
 
 - breaking your code into blocks
