--- a/1.notesJS/12.2.For-in_Loops.md
+++ b/1.notesJS/12.2.For-in_Loops.md
@@ -84,8 +84,8 @@ have nothing to do with data of array.
 
 <br />
 
-### javascript iteration  :zap:
-:curly_loop: an **here**, i'm referencing to a regular **for loop**  
+### :pig_nose: javascript iteration  :zap:
+### :curly_loop: and **here**, i'm referencing to a regular **for loop**  
 
    1. initialization
    2. condition evaluated:boolean: true | false
