--- a/1.notesJS/12.2.For-in_Loops.md
+++ b/1.notesJS/12.2.For-in_Loops.md
@@ -102,7 +102,7 @@ have nothing to do with data of array.
      }
 ```
    
-### flow of  control
+### :pig_nose: flow of  control :curly_loop:
 controlling which code the computer executes by:
 
 - breaking your code into blocks
@@ -116,7 +116,7 @@ controlling which code the computer executes by:
  - if statement
    - evaluates a boolean expression before performing an action  :feet:
      - if expression true,execute code
-     - if expression false, skip it
+     - if expression false, skip it  &nbsp; :feet:
       
  <br />
   <kbd>if syntax</kbd> :mag:
