--- a/1.notesJS/12.2.For-in_Loops.md
+++ b/1.notesJS/12.2.For-in_Loops.md
@@ -161,7 +161,7 @@ Ex:
     } else {
      //round number 
      console.log('right on! ' + grade + " is a number.");
-     //by wrapping up the code in a funtion, i am better able to
+     //by wrapping up the code into a funtion, i am better able to
      //control the flow of action
      roundNumber(grade); 
     }
