--- a/1.notesJS/12.0.Arrays.md
+++ b/1.notesJS/12.0.Arrays.md
@@ -222,5 +222,59 @@ array data:
  >:low_brightness:  hello samuel   &nbsp;&nbsp;&nbsp; position 100    
       
  
+### array with undefined elements  :notes:
+what if you have an array of scores (numbers) and undefines in it.  And you just wanna add the numbers and get a gpa from
+there. Prettty Eeeasy.  :bow:
+
+ex.
+
+> there are other ways to do this btw  :seedling:
+``` 
+  var num = Number(prompt('enter a number');
+```
+or :octopus:
+```
+parseInt();  //if decimals
+```
+or :octopus:
+```
+fixedTo(); //to limit decimals
+ ```
+I believe **""** quotes also gives you **undefined** or **NaN* and test for **typeof** **array**  etc etc etc
+
+Just another example  :crocodile:
+
+```
+ //array
+ var scores = [2,4,,,,,,,,,5,7,8,,,,,,,9,33,,,,,,,44,55,68,,,7,,8,,,,99,41];
+ 
+ //globals
+ var sum = 0;
+ var count = 0;
+ 
+ if ( scores.length > 0) {
+ 
+    for (var i=0; i < scores.length; i++) {
+       
+       if (scores[i] !== undefined) {
+          count ++;
+          sum += scores[i];
+        
+        
+     
+       }//if
+      
+    }//for
+
+ console.log(sum);
+ console.log(count);
+  
+ }//if
+ 
+ 
+
+```
+
+:100:
 
 
