--- a/1.notesJS/12.0.Arrays.md
+++ b/1.notesJS/12.0.Arrays.md
@@ -221,7 +221,7 @@ array data:
 
  >:low_brightness:  hello samuel   &nbsp;&nbsp;&nbsp; position 100    
       
- 
+<br/> 
 ### array with undefined elements  :notes:
 what if you have an array of scores (numbers) and undefines in it.  And you just wanna add the numbers and get a gpa from
 there. Prettty Eeeasy.  :bow:
@@ -240,8 +240,9 @@ or :octopus:
 ```
 fixedTo(); //to limit decimals
  ```
-I believe **""** quotes also gives you **undefined** or **NaN* and test for **typeof** **array**  etc etc etc
+I believe **""** quotes also gives you **undefined** or **NaN** and test for **typeof array**  etc etc etc  :snowboarder:
 
+<br/>
 Just another example  :crocodile:
 
 ```
