--- a/1.notesJS/12.0.Arrays.md
+++ b/1.notesJS/12.0.Arrays.md
@@ -260,6 +260,17 @@ Just another example  :crocodile:
        if (scores[i] !== undefined) {
           count ++;
           sum += scores[i];
+          /*
+          -----------
+          quick check
+          -----------
+          */
+          if(scores[i] == 2 && count == 1) {
+          //quick check
+          console.log('sum so far ' + sum);
+          console.log('count so far ' + count);
+          break;
+        }
         
         
      
