--- a/1.notesJS/12.0.Arrays.md
+++ b/1.notesJS/12.0.Arrays.md
@@ -266,9 +266,9 @@ Just another example  :crocodile:
           -----------
           */
           if(scores[i] == 2 && count == 1) {
-          //quick check
-          console.log('sum so far ' + sum);
-          console.log('count so far ' + count);
+          //just making sure starts out right
+          console.log('sum so far ' + sum);   //'sum so far 2'
+          console.log('count so far ' + count); // 'count so far 1'
           break;
         }
         
