--- a/1.notesJS/12.0.Arrays.md
+++ b/1.notesJS/12.0.Arrays.md
@@ -287,6 +287,61 @@ Just another example  :crocodile:
 
 ```
 
+
+## nested statement are more efficient than single line statements.  :bomb:
+
+
+
+
+### here JavaScript interpreter still have to check every line, even if first one evaluates to true  :barber:
+
+```
+ if(name.length != 0 && name == "Joe")
+      document.write('is this Fat Joe?');
+
+ if(name.length != 0 && name == "Sofia")
+      document.write('hey');
+
+ if(name.lenght == 0)
+     document.write('what's your name');
+                    
+```                  
+                 
+                    
+### here the javascript interpreter depending on whether something is true or false; will skip blocks of code.  :barber:
+                    
+```
+if (name.length != 0) {
+       
+       //code
+       //code
+     
+     }
+      else {
+        
+        document.write('what is your name');
+      }
+
+                    
+```
+
+:100:
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 :100:
 
 
