--- a/1.notesJS/12.0.Arrays.md
+++ b/1.notesJS/12.0.Arrays.md
@@ -288,12 +288,13 @@ Just another example  :crocodile:
 ```
 
 
-## nested statement are more efficient than single line statements.  :bomb:
+<kbd>Note about flow of Execution</kbd> 
+### nested statement are more efficient than single line statements.  :bomb:
 
 
 
 
-### here JavaScript interpreter still have to check every line, even if first one evaluates to true  :barber:
+#### here JavaScript interpreter still have to check every line, even if first one evaluates to true  :barber:
 
 ```
  if(name.length != 0 && name == "Joe")
@@ -308,7 +309,7 @@ Just another example  :crocodile:
 ```                  
                  
                     
-### here the javascript interpreter depending on whether something is true or false; will skip blocks of code.  :barber:
+#### here the javascript interpreter depending on whether something is true or false; will skip blocks of code.  :barber:
                     
 ```
 if (name.length != 0) {
