--- a/1.notesJS/12.0.Arrays.md
+++ b/1.notesJS/12.0.Arrays.md
@@ -287,14 +287,14 @@ Just another example  :crocodile:
 
 ```
 
-
+<br />
 <kbd>Note about flow of Execution</kbd> 
 ### nested statement are more efficient than single line statements.  :bomb:
 
 
 
 
-#### here JavaScript interpreter still have to check every line, even if first one evaluates to true  :barber:
+#### <kbd>I Here</kbd> JavaScript interpreter still have to check every line, even if first one evaluates to true  :barber:
 
 ```
  if(name.length != 0 && name == "Joe")
@@ -309,7 +309,7 @@ Just another example  :crocodile:
 ```                  
                  
                     
-#### here the javascript interpreter depending on whether something is true or false; will skip blocks of code.  :barber:
+#### <kbd>II Here</kbd> the javascript interpreter depending on whether something is true or false; will skip blocks of code.  :barber:
                     
 ```
 if (name.length != 0) {
