--- a/1.notesJS/12.0.Arrays.md
+++ b/1.notesJS/12.0.Arrays.md
@@ -309,7 +309,7 @@ Just another example  :crocodile:
 ```                  
                  
                     
-#### <kbd>II Here</kbd> the javascript interpreter depending on whether something is true or false; will skip blocks of code.  :barber:
+#### <kbd>II Here</kbd> the javascript interpreter depending on whether something is true or false; will skip blocks of code.  :barber: :barber:
                     
 ```
 if (name.length != 0) {
@@ -343,6 +343,6 @@ if (name.length != 0) {
 
 
 
-:100:
+
 
 
