--- a/1.notesJS/12.0.Arrays.md
+++ b/1.notesJS/12.0.Arrays.md
@@ -294,7 +294,7 @@ Just another example  :crocodile:
 
 
 
-#### <kbd>I Here</kbd> JavaScript interpreter still have to check every line, even if first one evaluates to true  :barber:
+#### <kbd>I Here</kbd> <kbd>JS Interpreter<kbd> still have to check every line, even if first one evaluates to true  :barber:
 
 ```
  if(name.length != 0 && name == "Joe")
@@ -309,7 +309,7 @@ Just another example  :crocodile:
 ```                  
                  
                     
-#### <kbd>II Here</kbd> the javascript interpreter depending on whether something is true or false; will skip blocks of code.  :barber: :barber:
+#### <kbd>II Here</kbd> the <kbd>JS Interpreter<kbd>  depending on whether something is true or false; will skip blocks of code.  :barber: :barber:
                     
 ```
 if (name.length != 0) {
