--- a/1.notesJS/12.0.Arrays.md
+++ b/1.notesJS/12.0.Arrays.md
@@ -288,7 +288,7 @@ Just another example  :crocodile:
 ```
 
 <br />
-<kbd>Note about flow of Execution</kbd> :bangbang:
+:bangbang: <kbd>Note about flow of Execution</kbd> :bangbang:
 ### nested statement are more efficient than single line statements.  :bomb:
 
 
