--- a/1.notesJS/12.0.Arrays.md
+++ b/1.notesJS/12.0.Arrays.md
@@ -289,7 +289,7 @@ Just another example  :crocodile:
 
 <br />
 :bangbang: <kbd>Note about flow of Execution</kbd> :bangbang:
-### nested statement are more efficient than single line statements.  :bomb:
+### nested statements are more efficient than single line statements.  :bomb:
 
 
 
