--- a/1.notesJS/19.FormValidation.md
+++ b/1.notesJS/19.FormValidation.md
@@ -29,24 +29,21 @@
  
 ### attributes :shit:
 - **name** :v:
-    - almost all input types should have a name attribute
-       That information is always sent to the server
+    - almost **all input** types should have a **name** attribute
+       That information is **always sent** to the **server**
 - **id** :v:
     - used for labels
     - used for javascript
 - **value** :v:
-    - (depends on the input type)
+    (depends on the input type)
     - button: text inside the button
     - textfield: provides a default value
         - if not changed, will be the value passed to
           the server. You can change the textfield value
           
-- **placeholder** :v:
-   - provides a suggestion
-   - not an 'official' value
        
        
-## what to validate:fire:
+## what to validate: &nbsp; fire:
 - the **type** of input  :point_left:
     - **number** instead of **string** 
 - the **format** of the input :point_left:
@@ -56,7 +53,7 @@
     - should it be **required** input?
     - do the email values **match**?
     
-## how to validate :musical_note:
+## how to validate &nbsp;:musical_note:
 - <kbd>i</kbd> one option is to use HTML5 input types
     - email, number, url  :zap:
 - <kbd>ii</kbd> using HTML5 attributes     
@@ -64,7 +61,7 @@
 - <kbd>iii</kbd> using javaScript functions
     - write custom code to validate :zap:
 
-### required attribute :ram:
+### required attribute &nbsp;:ram:
 - **halts submit** process if any elements empty
 - can **cause issues** during developing so **often** times
   **paired with** the form attribute novalidate   
