--- a/1.notesJS/19.FormValidation.md
+++ b/1.notesJS/19.FormValidation.md
@@ -43,7 +43,7 @@
           
        
        
-## what to validate: &nbsp; fire:
+## what to validate: &nbsp; :fire:
 - the **type** of input  :point_left:
     - **number** instead of **string** 
 - the **format** of the input :point_left:
