--- a/1.notesJS/19.FormValidation.md
+++ b/1.notesJS/19.FormValidation.md
@@ -65,7 +65,7 @@
 - **halts submit** process if any elements empty
 - can **cause issues** during developing so **often** times
   **paired with** the form attribute novalidate   
-  ex. **<form novalidate**...  <input **required** ..
+  <kbd>Ex.:</kbd> **<form novalidate**...  <input **required** ..
     
     
 ### pattern (regular expressions)
