--- a/1.notesJS/19.FormValidation.md
+++ b/1.notesJS/19.FormValidation.md
@@ -68,19 +68,19 @@
   <kbd>Ex.:</kbd> **<form novalidate**...  <input **required** ..
     
     
-### pattern (regular expressions)
+### patterns (regular expressions)
 - works with input **type=text** and requires the input
   have a specific format
   - [0-9]{5}   &nbsp;//you can **only enter in numbers** and there
                has to be **5 of them**
   
-  - [0-9]{13-16}  &nbsp; //**only numbers but btw 13 and 16**(credit card pattern)
+  - [0-9]{13-16}  &nbsp; <kbd>//</kbd> **only numbers but btw 13 and 16**(credit card pattern)
   
-  - [a-zA-Z]+  &nbsp; //you can enter **lowercase/uppercase a through Z**
+  - [a-zA-Z]+  &nbsp; <kbd>//</kbd>you can enter **lowercase/uppercase a through Z**
                 but need at least one character
                 
                 
-Ex. a zip code  :scream_cat:
+<kbd>Ex.:</kbd> a zip code  :scream_cat:
 - you have two choices: :v:
     - to use input type number with min, max :eyes:
     - to use reg expressions with type text :eyes:
@@ -108,6 +108,7 @@ Ex. a zip code  :scream_cat:
       <input type="submit" value="click here" />
   </form>   
 ```
+
 ### validating input: email
 
 > sites like html5 patterns recommend using
