--- a/1.notesJS/19.FormValidation.md
+++ b/1.notesJS/19.FormValidation.md
@@ -82,11 +82,11 @@
                 
 <kbd>Ex.:</kbd> a zip code  :scream_cat:
 - you have two choices: :v:
-    - to use input type number with min, max :eyes:
-    - to use reg expressions with type text :eyes:
+    - to use input type number with **min**, **max** :eyes:
+    - to use reg expressions with **type** **text** :eyes:
 
 <kbd>note:</kbd>if you need to make sure 5 digits are
-     entered, then you need to use a reg exp. 
+     entered, then you need to use a **reg exp**. 
      Min, max won't do it. :umbrella:
 
 > there isn't always a guarantee that the browser will
@@ -111,8 +111,8 @@
 
 ### validating input: email
 
-> sites like html5 patterns recommend using
-  the email validation provided by browsers cause
+> sites like **html5 patterns** recommend using
+  the email validation **provided by browsers** cause
   is nearly impossible to get a perfect validation
 
 - **what?** still :frog: i'm comparing two emails to make sure
@@ -128,8 +128,8 @@
 
 <kbd>note:</kbd>
 
-if you have a button or input type submit with
-a onclick event attached to it:
+if you have a **button** or **input** **type submit** with
+a **onclick event** attached to it:
 ```
    input type="submit" value="confirm emails"
    onclick="checkThat();"
