--- a/1.notesJS/19.FormValidation.md
+++ b/1.notesJS/19.FormValidation.md
@@ -135,7 +135,7 @@ a **onclick event** attached to it:
    onclick="checkThat();"
    
 ```
-That would not prevent default behavior
+That :point_up_2: would not prevent default browser behavior (upon submit) :point_up_2:
 
 ```
    input type="submit" value="confirm emails"
@@ -147,7 +147,7 @@ That would not prevent default behavior
    }
    
 ```
-:mega: however this here will **return** you a **boolean**: **true**
+:mega: however this :point_up_2: here will **return** you a **boolean**: **true** :point_up_2: :ok_hand:
 or **false**.   
 If **interpreter evaluates that as false**, then will
 tell the onclick event that is false and **stop it from
@@ -155,5 +155,5 @@ submitting**.
 
 
 
-l
+:100:
 
